2006-03-20  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Clock.java: (Clock):
	Time are longs, avoids overflows.

	* src/com/fluendo/jst/Sink.java: (Sink.Pad):
	First pass at posting EOS.

	* src/com/fluendo/player/Cortado.java: (Cortado.handleMessage):
	Some more debugging about buffering and EOS.

	* src/com/fluendo/plugin/OggDemux.java:
	(OggDemux..OggStream.bufferFromPacket):
	Timestamp outgoing buffers.

	* src/com/fluendo/plugin/Queue.java: (Queue.updateBuffering),
	(Queue.Pad):
	Handle EOS when we are buffering. Fixes #247.

	* src/com/fluendo/plugin/TheoraDec.java: (TheoraDec..takeHeader),
	(TheoraDec..getFirstTs), (TheoraDec..Pad):
	Don't try to convert granulepos if we did not receive headers
	yet.

2006-03-20  Wim Taymans  <wim@fluendo.com>

	* TODO:
	Updated TODO.

	* src/com/fluendo/jst/Sink.java: (Sink.Pad):
	Set flushing flag correctly when we shutdown.

	* src/com/fluendo/plugin/AudioSink.java: (AudioSink.RingBuffer),
	(AudioSink.RingBuffer.acquire), (AudioSink.RingBuffer.setSample),
	(AudioSink.setCapsFunc), (AudioSink), (AudioSink.changeState):
	Fix race in going to paused.
	Don't deadlock when we try to release the audio device.

2006-02-28  Andy Wingo  <wingo@pobox.com>

	* TESTIMONIALS: New file, random testimonials culled from the
	mailing list.

2006-01-23  Wim Taymans  <wim@fluendo.com>

	* TODO:
	Updated TODO

	* src/com/fluendo/examples/Player2.java:
	(PlayPipeline.doSendEvent):
	Fix for API removal.

	* src/com/fluendo/jst/Buffer.java: (Buffer), (Buffer.create),
	(Buffer.Buffer):
	Added buffer flags.
	Prepare for using timestampEnd.

	* src/com/fluendo/jst/Event.java: (Event),
	Update newsegment event info to match GStreamer.

	(Event.parseSeekPosition), (Event.parseSeekFormat):
	* src/com/fluendo/jst/Pipeline.java: (Pipeline.doChildStateChange):
	Remove preroll hack.

	* src/com/fluendo/jst/Sink.java: (Sink), (Sink.Pad), (Sink.doSync),
	(Sink.query), (Sink.changeState):