@@ -46,6 +46,11 @@ Should build everything, if your system is setup correctly.
 You can copy build.config.sample to build.config and tweak it to choose
 certain settings.
 
+FAQ
+---
+You can find our FAQ on-line at
+https://core.fluendo.com/flumotion/trac/wiki/FAQ#about-cortado
+
 EXAMPLES
 --------
 
@@ -54,7 +59,8 @@ You also need to set the classpath to your build tree when running
 (output/build/debug or output/build/release)
 
 - Jikes does not have a VM
-- gij (the GNU Java VM) seems to hang right after opening the HTTP connection
+- gij (the GNU Java VM) does not have a javax.sound.sampled implementation, so
+  fails when playing audio
 - Sun Java VM works for me:
   /usr/java/jre1.5.0_04/bin/java -cp output/build/debug com.fluendo.examples.Player3 http://stream.fluendo.com:8850
 
